# TMNF_server_client

./: .gitignore  README.md  response.txt  start_dedicated_server.sh  test.py
.cache/clangd/index/: base_plugin.cpp.905B78F525210D96.idx  base_plugin.hpp.BFE4A0757DC4404B.idx  base_plugin_tests.cpp.02155FBFF918F416.idx  base_types.hpp.598C101FAA9DC42E.idx  main.cpp.F547C882342D1628.idx  server.hpp.6789850E35897798.idx
ControlPanel/: requirements.txt
ControlPanel/Server/: __init__.py  cli.py  form.py  model.py  server_status.py  view.py
ControlPanel/Server/templates/: servers_view.html  sign_in.html
ControlPanel/parser/: parser.py
Core/: CMakeLists.txt  main.cpp
Core/BasePlugin/: CMakeLists.txt  base_plugin.cpp  base_plugin.hpp
Core/BaseRequestPlugin/: CMakeLists.txt  base_request_plugin.cpp
Core/BaseStructures/: base_types.hpp  base_types_conventions.hpp  request.hpp  requests.hpp  server.hpp  structures.hpp
Core/CallbackListener/: CMakeLists.txt  callback_listener.cpp  callback_listener.hpp
Core/Tests/: CMakeLists.txt  base_plugin_tests.cpp
